--- a/main.bib
+++ b/main.bib
@@ -771,6 +771,24 @@ MRREVIEWER = {Robert Speiser},
   note = {\url{http://hedayatzadeh.info/Home_files/EPLTG.pdf}, Accessed: 2015-01-09}
 }
 
+@book {Hirzebruch,
+    AUTHOR = {Hirzebruch, Friedrich},
+     TITLE = {Topological methods in algebraic geometry},
+    SERIES = {Classics in Mathematics},
+      NOTE = {Translated from the German and Appendix One by R. L. E.
+              Schwarzenberger,
+              With a preface to the third English edition by the author and
+              Schwarzenberger,
+              Appendix Two by A. Borel,
+              Reprint of the 1978 edition},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {1995},
+     PAGES = {xii+234},
+      ISBN = {3-540-58663-6},
+   MRCLASS = {57-02 (01A75 14-02)},
+  MRNUMBER = {1335917},
+}
+
 @ARTICLE{HopkinsCOCTALOS,
   author = {Hopkins, Michael J.},
   title = {Complex oriented cohomology theories and the language of stacks},
