clean up intro to Appendix A

--- a/powerops.tex
+++ b/powerops.tex
@@ -6,26 +6,23 @@
 
 Our goal in this Appendix is to give a tour of the interaction of the $\sigma$--orientation with a topic of modern research, the theory of $E_\infty$ ring spectra, in a manner consistent with the rest of the topics in this book.  Because the theory of $E_\infty$ ring spectra (in particular: their algebraic geometry) is still very much developing, we have no hope of stating results in their maximum strength or giving a completely clear picture---as of this writing, the maximum strength is unknown and the picture is still resolving.  Although $E_\infty$ ring spectra themselves were introduced decades ago, we will even avoid giving a proper definition of them here, instead referring to the original work of May and collaborators~\cite{EKMM} and the more recent work of Lurie~\cite[Chapter 7]{LurieHA} for a proper treatment.  In acknowledgement of this underwhelming level of rigor, we have downgraded our discussion from a Case Study to an Appendix.
 
-As far as we are concerned, $E_\infty$ ring spectra appear in order to solve the following problem: given two ring spectra $R$ and $S$ in the homotopy category, the set of homotopy classes of ring maps $\CatOf{RingSpectra}(R, S)$ forms a subset of the set of all homotopy classes $[R, S] = \pi_0 \CatOf{Spectra}(R, S)$, selected by a homomorphism condition.  There is no meaningful way to enrich this to a \emph{space} of ring spectrum maps from $R$ to $S$, which inhibits us from understanding an obstruction theory for ring spectra, i.e., approximating $R$ by ``nearby'' ring spectra $R'$ in a way that relates $\CatOf{RingSpectra}(R, S)$ and $\CatOf{RingSpectra}(R', S)$ by a fiber sequence.
+As far as we are concerned, $E_\infty$ ring spectra arise in order to solve the following problem: given two ring spectra $R$ and $S$ in the homotopy category, the set of homotopy classes of ring maps $\CatOf{RingSpectra}(R, S)$ forms a subset of the set of all homotopy classes $[R, S] = \pi_0 \CatOf{Spectra}(R, S)$, selected by a homomorphism condition.  There is no meaningful way to enrich this to a \emph{space} of ring spectrum maps from $R$ to $S$, which inhibits us from understanding an obstruction theory for ring spectra, i.e., approximating $R$ by ``nearby'' ring spectra $R'$ in a way that relates $\CatOf{RingSpectra}(R, S)$ and $\CatOf{RingSpectra}(R', S)$ by a fiber sequence.
 
-The extra data that accomplishes this mapping space feat turns out to be an explicit naming of the homotopies controlling the associativity and commutativity of the ring spectrum multiplication, which are subject to highly intricate compatibility conditions.\footnote{This is rather analogous to the extra data required on a \emph{space}, beyond just a multiplication, which allows one to use the bar construction to assemble a delooping.}\footnote{The high degree of intricacy gives rise to a mapping space, but it also excludes some maps of ring spectra from qualifying as $E_\infty$ maps.}  Again, rather than spell this out, it suffices for our purposes to say that there is such a notion of a structured ring spectrum that begets a mapping space between two such.  Additionally, we record the following omnibus theorem as indication that this program overlaps with the one we have been describing already:
+The extra data that accomplishes this mapping space feat turns out to be an explicit naming of the homotopies controlling the associativity and commutativity of the ring spectrum multiplication, which are subject to highly intricate compatibility conditions.\footnote{This is rather analogous to the extra data required on a \emph{space}, beyond just a multiplication, which allows one to use the bar construction to assemble a delooping.}\footnote{The high degree of intricacy accomplishes this goal of constructing mapping spaces, but it interacts strangely with the classical notion of a ring spectrum in the homotopy category: there are ring spectrum maps that admit \emph{no} enrichment to an $E_\infty$ map, and there are ring spectrum maps that admit \emph{multiple} enrichments to $E_\infty$ maps.}  Again, rather than spell this out, it suffices for our purposes to say that there is such a notion of a structured ring spectrum that begets a mapping space between two such.  Additionally, we record the following omnibus theorem as indication that this program overlaps with the one we have been describing already:
 \begin{theorem}
-\citeme{this is a mega-theorem}
-\todo{This is the first mention of $\tmf$.  Give a description of $\tmf$, $\TMF$, and $\Tmf$ in terms of $\moduli{ell}$.}
 The following are examples of $E_\infty$ ring spectra:
 \begin{itemize}
-    \item The classical $K$--theories $KU$ and $KO$.
-    \item The Eilenberg--Mac Lane spectra $HR$.
-    \item The Morava $E$--theories $E_\Gamma$ and their fixed point spectra.\footnote{Notably, the Morava $K$--theories are \emph{not} $E_\infty$ rings at finite heights.}
-    \item The Thom spectra arising from the $J$--homomorphism, including $MO$, $MSO$, $M\Spin$, $M\String$, $MU$, $MSU$, and $MU[6, \infty)$.
-    \item The spectra $\TMF$, $\Tmf$, and $\tmf$. \qed
+    \item (\cite[Section VIII.1]{MayRingSpacesSpectra}) The classical $K$--theories $KU$ and $KO$.
+    \item (\cite[Section VIII.1]{MayRingSpacesSpectra}) The Eilenberg--Mac Lane spectra $HR$.
+    \item (\cite[Corollary 7.6--7]{GoerssHopkins}) The Morava $E$--theories $E_\Gamma$ and their fixed point spectra.\footnote{Notably, the Morava $K$--theories are \emph{not} $E_\infty$ rings at finite heights, in view of \Cref{HinftyRingsModp}.}
+    \item (\cite[Section IV.3]{MayRingSpacesSpectra}) The Thom spectra arising from the $J$--homomorphism, including $MO$, $MSO$, $M\Spin$, $M\String$, $MU$, $MSU$, and $MU[6, \infty)$.
+    \item (\citeme{Behrens}, cf.\ \Cref{ConstructionOfTMFSection}) The spectra $\TMF$, $\Tmf$, and $\tmf$. \qed
 \end{itemize}
 \end{theorem}
 
 The forgetful map from $E_\infty$ rings down to ring spectra in the homotopy category factors through an intermediate category, that of $H_\infty$ ring spectra, which captures the extra factorizations expressing these associativity and commutativity relations.  Specifically, recall the following definition from the discussion in \Cref{QuillenPowerOpnsSection}:
 
-\begin{definition}[{cf.\ \Cref{QuillenPowerOpnsSection}}]
-\citeme{BMMS}
+\begin{definition}[{\cite[Definition I.3.1]{BMMS}, cf.\ \Cref{QuillenPowerOpnsSection}}]
 An $H_\infty$ ring spectrum is a ring spectrum $E$ equipped with factorizations $\mu_n$ as in
 \begin{center}
 \begin{tikzcd}
@@ -44,13 +41,11 @@ Each $E_\infty$ ring spectrum gives rise to an $H_\infty$ ring spectrum in the h
 
 In \Cref{QuillenPowerOpnsSection}, \Cref{StabilizingTheMUSteenrodOps}, and \Cref{CalculationOfMUStarSection}, we introduced an $H_\infty$ ring structure on $MU$ and used it to make a calculation of the coefficient ring $MU_*$.  Our primary goal in this Appendix is to introduce an $H_\infty$ ring structure on certain chromatically interesting spectra, including Morava's theories $E_\Gamma$, and to describe the compatibility laws arising from intertwining these two $H_\infty$ structures.  The culminating result is as follows:
 
-\begin{theorem}
-\citeme{Put a forward reference to a section below, and another reference to the definition of norm-coherence}
-\todo{Give a statement for $M\String \to \tmf$ as well.}
-An orientation $MU[6, \infty) \to E_\Gamma$ is $H_\infty$ if and only if the induced cubical structure is ``norm-coherent''. \qed
+\begin{theorem}[{cf.\ \Cref{AHSHinftyResultForEthy}}]
+An orientation $MU[6, \infty) \to E_\Gamma$ is $H_\infty$ if and only if the induced cubical structure is ``norm-coherent'' (cf.\ \Cref{NormCoherentDefn}). \qed
 \end{theorem}
 
-\noindent Before addressing this, we discuss in \Cref{CharacterTheorySection} an important phenomenon: after deleting certain forms of torsion, the Morava $E_\Gamma$--homology of a finite spectrum can be well--approximated by its Morava $E_{\Gamma'}$--homology where $\Gamma'$ satisfies $\height{\Gamma'} < \height{\Gamma}$.  This is interesting in its own right, and we will quickly see that the precise form of the approximation bears directly on the study of power operations.  Finally, with the homotopy category exposed, we give a summary of the known results about $E_\infty$ orientations themselves in \Cref{JuvitopTalkSection}.
+\noindent Before addressing this, we discuss in \Cref{CharacterTheorySection} an important phenomenon: after deleting certain forms of torsion, the Morava $E_\Gamma$--homology of a finite spectrum can be well--approximated by its Morava $E_{\Gamma'}$--homology where $\Gamma'$ satisfies $\height{\Gamma'} < \height{\Gamma}$.  This is interesting in its own right, and we will quickly see that the precise form of the approximation bears directly on the study of power operations.  Finally, with the homotopy category exposed, we give a summary of the known results about $E_\infty$ orientations themselves in \Cref{ConstructionOfTMFSection}, where we summarize the construction of a spectrum $\TMF$, and in \Cref{JuvitopTalkSection}, where we summarize what goes into giving it a $\String$--orientation.
 
 
 
@@ -462,7 +457,7 @@ A ring map $x\co MUP \to E_\Gamma$ is $H_\infty$ if and only if the internal pow
 
 We now expand the algebraic condition that this last Corollary encodes.  The power operation for $MUP$ was described in \Cref{AjAndBjAreInTheFGLSubring}, where we found that it applies the norm construction to $f$ for the universal $\Z/p$--level structure on $\G$.  The cyclic power operation on Morava $E$--theory was determined in the previous section to act by pullback along the deformation of Frobenius isogeny associated to the same universal level structure.  This condition is important enough to warrant a name:
 
-\begin{definition}
+\begin{definition}\label{NormCoherentDefn}
 A coordinate $\phi\co \G \to \A^1$ on a Lubin--Tate group $\G$ is said to be \textit{norm-coherent} when for all subgroups $K \subseteq \G$, we have that $N_K \phi$ and $\psi_K^* \phi$ are related by the isomorphism $g_K$.
 \end{definition}
 
@@ -490,7 +485,7 @@ The first observation is that the norm-coherence condition can be made sense of 
 One can already show that the unicity clause applies: there is only one section $s$ of $\L$ which reduces to $s_0$ and which is norm-coherent for the canonical subgroup $\G[p]$.  In order to conclude that $s$ is truly norm-coherent, one shows that $N_\ell s$ satisfies its own $[p]$--norm-coherence condition (for the new canonical subgroup $(\G / \ell)[p] \le \G / \ell$), forcing it to agree with $\psi_\ell^* s$.
 \end{proof}
 
-\begin{corollary}
+\begin{corollary}\label{AHSHinftyResultForEthy}
 Every orientation $s_0\co MUP \to K_\Gamma$ extends uniquely to a diagram
 \begin{center}
 \begin{tikzcd}
@@ -558,7 +553,7 @@ We can apply these observations to $E_{\widehat C}$, the Morava $E$--theory for 
 
 
 
-\section{The spectrum of modular forms}
+\section{The spectrum of modular forms}\label{ConstructionOfTMFSection}
 
 \begin{center}
 \textbf{\Large This is a paste of a talk from another venue. It needs reworking.}
