notes about a dieudonne pairing

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -784,7 +784,7 @@ w_n(F_m a_*) & = \begin{cases} x_{n/m} & \text{if $m \mid n$}, \\ 0 & \text{othe
 One can use this to give an explicit description of the inverse to the covariant Dieudonn\'e functor whose existence is asserted by \Cref{CurveDieudonneTheorem}: the idea is that the evaluation map $\widehat{\W}_p \times C\G \to \G$ is surjective, and so we can recover $\G$ by imposing intertwining relations stemming from the evaluation map.  Following this through results in the following presentation: \[{D_*}^{-1}(M)(T) = \left. (\widehat{W}_p(T) \otimes_{\W_p(k)} M) \middle/ \left( \begin{array}{c} Va \otimes m = a \otimes Fm, \\ Fa \otimes m = a \otimes Vm \end{array} \right) \right. .\]
 
 We now seek to compare our two Dieudonn\'e functors.  In some sense, the comparison is inspired by an integration pairing: $D_*(\G)$ is populated by curves $\gamma$ on $\G$ and $D^*(\G)$ is populated by $1$--forms $\omega$ on $\G$, which we would like to sew together to form \[D_*(\G) \times D^*(\G) \xrightarrow{(\gamma, \omega) \mapsto \text{``$\int_\gamma \omega$''}} \W_p(k).\]
-\todo[inline]{There is more to say here.  Can you give more intuition about how these two presentations are related, for example from Lie theory?  What curve does a cohomologically left-invariant form get sent to?  Is ``cohomologically-invariant'' analogous to ``$p$-typification'', perhaps along the lines of the ``crystalline''-ness of $H^1_{dR}$?  Can these primitives be furthermore related to the idea that taking primitive cooperations selects the additive ones? // Erick Knight suggested that there should be an alternative definition of covariant Dieudonn\'e theory also expressed by the cohomology of some sheaf, and that this will give rise to the desired duality pairing with values in some Tate-twisted ground object, which is precisely what we are looking for.  I wonder if the right thing to do is to form the bar complex on the de Rham sheaf...!}
+\todo[inline]{There is more to say here.  Can you give more intuition about how these two presentations are related, for example from Lie theory?  What curve does a cohomologically left-invariant form get sent to?  Is ``cohomologically-invariant'' analogous to ``$p$-typification'', perhaps along the lines of the ``crystalline''-ness of $H^1_{dR}$?  Can these primitives be furthermore related to the idea that taking primitive cooperations selects the additive ones? // Erick Knight suggested that there should be an alternative definition of covariant Dieudonn\'e theory also expressed by the cohomology of some sheaf, and that this will give rise to the desired duality pairing with values in some Tate-twisted ground object, which is precisely what we are looking for.  I wonder if the right thing to do is to form the bar complex on the de Rham sheaf...! // I talked to Mike about this, and his suggestion was to learn about Cartier's ``logarithmic modules'', which lift the $p$--typical curves on a formal group in positive characteristic to a preferred submodule of curves on a lift to mixed characteristic, and that once these two things ($1$--forms and logarithmic curves) are in the same place, the pairing I want is probably the residue map / the Serre duality pairing.  He half-heartedly suggested Lazard's book, especially VII.3.10 and V.7.3.  (Also on the table of ideas: the Cartier dual is witnessed by the existence of a Poincar\'e bundle, which is a biextension.  Maybe this leads somewhere?)}
 
 This can be made rigorous by noting the following basic but ultra-important fact about the Witt scheme:
 \begin{lemma}
