clean up todos in A.2

--- a/main.bib
+++ b/main.bib
@@ -212,6 +212,25 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {A. Dold},
 }
 
+@article {Baker,
+    AUTHOR = {Baker, Andrew},
+     TITLE = {Power operations and coactions in highly commutative homology
+              theories},
+   JOURNAL = {Publ. Res. Inst. Math. Sci.},
+  FJOURNAL = {Publications of the Research Institute for Mathematical
+              Sciences},
+    VOLUME = {51},
+      YEAR = {2015},
+    NUMBER = {2},
+     PAGES = {237--272},
+      ISSN = {0034-5318},
+   MRCLASS = {55S12 (55P43 55S10 55U35)},
+  MRNUMBER = {3348109},
+MRREVIEWER = {Geoffrey M. L. Powell},
+       DOI = {10.4171/PRIMS/154},
+       URL = {http://dx.doi.org/10.4171/PRIMS/154},
+}
+
 @article {BCGHRW,
     AUTHOR = {Baker, A. and Carlisle, D. and Gray, B. and Hilditch, S. and
               Ray, N. and Wood, R.},
@@ -549,6 +568,21 @@ MRREVIEWER = {Mihran Papikian},
 MRREVIEWER = {Edgar H. Brown, Jr.},
        DOI = {10.1016/0022-4049(82)90020-2},
        URL = {http://dx.doi.org/10.1016/0022-4049(82)90020-2},
+}
+
+@incollection {Davis,
+    AUTHOR = {Davis, Donald M.},
+     TITLE = {Computing {$v_1$}-periodic homotopy groups of spheres and some
+              compact {L}ie groups},
+ BOOKTITLE = {Handbook of algebraic topology},
+     PAGES = {993--1048},
+ PUBLISHER = {North-Holland, Amsterdam},
+      YEAR = {1995},
+   MRCLASS = {55Q40 (55Q52 57T20)},
+  MRNUMBER = {1361905},
+MRREVIEWER = {Robert D. Thompson},
+       DOI = {10.1016/B978-044481779-2/50021-3},
+       URL = {http://dx.doi.org/10.1016/B978-044481779-2/50021-3},
 }
 
 @article {DavisLawson,
