--- a/preface.tex
+++ b/preface.tex
@@ -13,23 +13,23 @@
 \subsection*{Acknowledgements}
 
 
-This book owes an incredible amount to an incredible number of incredible people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.  It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe a very large debt to each of Matthew Ando, Michael Hopkins, and Neil Strickland, for having shown me such individual attention and care as well as for having originally worked out the tail of this long story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deep friendliness that he showed me during those first couple of years at Urbana--Champaign.  Mike and Neil are not far behind.  Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging, introducing me to an entire mathematical worldview.  Among other things, Neil shared with me a note of his that eventually blossomed into my thesis problem, which is an awfully nice gift to have given.
+This book owes an incredible amount to an incredible number of incredible people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.  It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe a very large debt to each of Matthew Ando, Michael Hopkins, and Neil Strickland, for having shown me such individual attention and care, as well as for having worked out the tail of this long story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deep friendliness that he showed me during my time at Urbana--Champaign.  Mike and Neil are not far behind.  Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging and giving.  Among other things, Neil shared with me a note of his that eventually blossomed into my thesis problem, which is an awfully nice gift to have given.
 
-Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my Ph.D.\ adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley and asked to be his student, I had already drunk well in excess of homotopical Kool-Aid's LD50, but he masked his frustration well and endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, to speak understandably, and to highlight the connections with nearby fields, emphasizing that mathematics done in isolation rather than in maximal connection to other people is mathematics wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.  (It is up to the reader to determine whether I have actually succeeded at this, and any failure of mine in this regard can't possibly be visited on him.)
+Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my Ph.D.\ adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley, I was already too soaked through with homotopy theory to develop a flavor for his sort of mathematical physics, and he nonetheless endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, to speak understandably, and to highlight the connections with nearby fields, emphasizing that mathematics done in isolation rather than in maximal connection to other people is mathematics wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.  (It is up to the reader to determine whether I have actually succeeded at this, and any failure of mine in this regard can't possibly be visited upon him.)
 
-More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory, tolerating me as a very loud and public learner.  Haynes Miller, Doug Ravenel, and Steve Wilson (the $BP$ Mafia~\cite{HopkinsOnRavenel}) have all been invaluable resources: they have answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.  Jack Morava has played no smaller a role in both the discovery of chromatic homotopy theory and my own personal education.  It has been an incredible treat to know him and to have received pushes from him at critical moments.  Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is an enormous credit first to their intelligence that they are so comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time, time, and time again in hopes that I would someday get it.
+More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory, tolerating me as a very loud and public learner.  Haynes Miller, Doug Ravenel, and Steve Wilson (the $BP$ Mafia~\cite{HopkinsOnRavenel}) have all been invaluable resources: they have answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.  Jack Morava has played no smaller a role in both the discovery of chromatic homotopy theory and my own personal education.  It has been an incredible treat to know him and to have received pushes from him at critical moments.  Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is an enormous credit first to their intelligence that they are so comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time and time again, in the hopes that I would someday get it.
 
-The bulk of this book began as a set of lecture notes for a topics course\footnote{MATH 278 (159627).} I was invited to teach at Harvard University in the spring term of 2016, and I would like to thank the department for the opportunity and for the very enriching time that I spent there.  The \emph{germ} of these notes, however, took root at the workshop \textit{Flavors of Cohomology}, organized and hosted by Hisham Sati in June 2015.  In particular, this was the first time I tried to push the idea of a ``context'' on someone else, which---for better or worse---has grown into the backbone of this book.  The book also draws on feedback from lecturing in the \textit{In-Formal Groups Seminar}, which took place during the MSRI semester program in homotopy theory in the spring term of 2014, attended primarily by David Carchedi, Achim Krause, Matthew Pancia, and Sean Tilson.  Finally, my thoughts about the material in this book and its presentation were further refined by many, many, many conversations with other students at UC--Berkeley, primarily: my undergraduate readers Hood Chatham and Geoffrey Lee, the visiting student Catherine Ray, and my officemates Aaron Mazel-Gee and Kevin Wray---who, poor guys, put up with listening to me for years on end.
+The bulk of this book began as a set of lecture notes for a topics course\footnote{MATH 278 (159627), Spring 2016.} that I was invited to teach at Harvard University in the spring term of 2016, and I would like to thank the department for the opportunity and for the very enriching time that I spent there.  The \emph{germ} of these notes, however, took root at the workshop \textit{Flavors of Cohomology}, organized and hosted by Hisham Sati in June 2015.  In particular, this was the first time that I tried to push the idea of a ``context'' on someone else, which---for better or worse---has grown into the backbone of this book.  The book also draws on feedback from lecturing in the \textit{In-Formal Groups Seminar}, which took place during the MSRI semester program in homotopy theory in the spring term of 2014, attended primarily by David Carchedi, Achim Krause, Matthew Pancia, and Sean Tilson.  Finally, my thoughts about the material in this book and its presentation were further refined by many, many, many conversations with other students at UC--Berkeley, primarily: my undergraduate readers Hood Chatham and Geoffrey Lee, the visiting student Catherine Ray, and my officemates Aaron Mazel-Gee and Kevin Wray---who, poor guys, put up with listening to me for years on end.
 
-This book also draws on a lot of unpublished material.  The topology community gets some flak for this, especially among graduate students who aren't fully cognizant of the effort it takes to bring anything to publication---especially anything long.  Rather, I think it is to topologists' credit that this unpublished material is made available anyway, essentially without redaction.  Reference materials of this sort that have influenced this book include: Matthew Ando's \textit{Dieudonn\'e Crystals Associated to Lubin--Tate Formal Groups}; Michael Hopkins's \textit{Complex Oriented Cohomology Theories and the Language of Stacks}; Jacob Lurie's \textit{Chromatic Homotopy (252x)}; Haynes Miller's \textit{Notes on Cobordism}; Charles Rezk's \textit{Elliptic Cohomology and Elliptic Curves}, as well as his \textit{Notes on the Hopkins--Miller Theorem}, and his \textit{Supplementary Notes for Math 512}; Neil Strickland's \textit{Formal Schemes for $K$--Theory Spaces} as well as his \textit{Functorial Philosophy for Formal Phenomena}; the Hopf archive preprint version of the Ando--Hopkins--Strickland article \textit{Elliptic Spectra, the Witten Genus, and the Theorem of the Cube}\footnote{This earlier version contains a lot of information that didn't make it to publication, as the referee (perhaps rightly) found it too dense to make heads or tails of.  Once the reader already has the sketch of the argument established, however, the original version is a truly invaluable resource to go back and re-read.}; and the unpublished Ando--Hopkins--Strickland article \textit{Elliptic Cohomology of $BO\<8\>$ in Positive Characteristic}, recovered from the mists of time by Gerd Laures\footnote{There is a bit of a funny story here: none of the authors of this article could find their own preprint, but one of their old graduate students had held on to a paper copy.  In their defense, two decades had passed---but that in turn only makes Gerd's organizational skills more heroic.}.  I would not have understood the material presented here without access to these resources, nevermind the supplementary guidance.
+This book also draws on a lot of unpublished material.  The topology community gets some flak for this reluctance to publish certain documents, but I think it is to our credit that this material is made available anyway, essentially without redaction.  Reference materials of this sort which have influenced this book include: Matthew Ando's \textit{Dieudonn\'e Crystals Associated to Lubin--Tate Formal Groups}; Michael Hopkins's \textit{Complex Oriented Cohomology Theories and the Language of Stacks}; Jacob Lurie's \textit{Chromatic Homotopy (252x)}; Haynes Miller's \textit{Notes on Cobordism}; Charles Rezk's \textit{Elliptic Cohomology and Elliptic Curves}, as well as his \textit{Notes on the Hopkins--Miller Theorem}, and his \textit{Supplementary Notes for Math 512}; Neil Strickland's \textit{Formal Schemes for $K$--Theory Spaces} as well as his \textit{Functorial Philosophy for Formal Phenomena}; the Hopf archive preprint version of the Ando--Hopkins--Strickland article \textit{Elliptic Spectra, the Witten Genus, and the Theorem of the Cube}\footnote{This earlier version contains a lot of information that didn't make it to publication, as the referee (perhaps rightly) found it too dense to make heads or tails of.  Once the reader already has the sketch of the argument established, however, the original version is a truly invaluable resource to go back and re-read.}; and the unpublished Ando--Hopkins--Strickland article \textit{Elliptic Cohomology of $BO\<8\>$ in Positive Characteristic}, recovered from the mists of time by Gerd Laures\footnote{There is a bit of a funny story here: none of the authors of this article could find their own preprint, but one of their old graduate students had held on to a paper copy.  In their defense, two decades had passed---but that in turn only makes Gerd's organizational skills more heroic.}.  I would not have understood the material presented here without access to these resources, nevermind the supplementary guidance.
 
 In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.  These contributors are: Eva Belmont, Hood Chatham (especially his marvelous spectral sequence package, \texttt{sseqpages}), Dexter Chua (an outside consultant who helped translate the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I might have never tried to understand without his insistence that I speak about it and his further help in preparing that talk).
 
 More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textbf{Eva Belmont}, Jason Bland, Dorin Boger, \textbf{Lukas Brantner}, \textbf{Christian Carrick}, \textbf{Hood Chatham}, David Corwin, \textbf{Jun Hou Fung}, \textbf{Meng Guo}, \textbf{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textbf{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textbf{Jake McNamara}, \textbf{Akhil Mathew}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textbf{Krishanu Sankar}, \textbf{Jay Shah}, Ananth Shankar, \textbf{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textbf{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm were overwhelming---I felt duty-bound to keep telling them things they didn't already know, and despite my best efforts to keep out ahead I also felt like they were constantly nipping at my heels.  As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.  They're a very bright group.  Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.
 
-Additionally, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.  Such helpful people include: Tobias Barthel, Jon Beardsley, Martin Bendersky, Sanath Devalapurkar, Ben Gadoua, Mike Hill, Johan Konter, Achim Krause, Pedro Mendes de Araujo, Denis Nardin, Justin Noel, Sune Precht Reeh, Andrew Senger, and Sean Tilson.
+Additionally, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.  Such helpful people include: Tobias Barthel, Jon Beardsley, Martin Bendersky, Sanath Devalapurkar, Ben Gadoua, Mike Hill, Johan Konter, Achim Krause, Akhil Mathew, Pedro Mendes de Araujo, Denis Nardin, Justin Noel, Sune Precht Reeh, Andrew Senger, and Sean Tilson.
 
-Lastly, but by far most importantly, this book---and, frankly, \emph{I}---would not have made it out of the gates without Samrita Dhindsa's love, support, and patience.  She made living in Boston a completely different experience: a balanced life instead of being quickly and totally overwhelmed by work, a lively circle of friends instead of what would have been a much smaller world, new experiences instead of worn-through ones, and love throughout.  Without her compassion, tenderness, and understanding I would not be half the open and vibrant person I am today, and I would know so much less of myself.  It is awe-inspiring to think about, and it is a pleasure and an honor to acknowledge her like this and to dedicate this book to her.
+Lastly, but by far most importantly, this book---and, frankly, \emph{I}---would not have made it out of the gates without Samrita Dhindsa's love, support, and patience.  She made living in Boston a completely different experience: a balanced life instead of being quickly and totally overwhelmed by work, a lively circle of friends instead of what would have been a much smaller world, new experiences instead of worn-through ones, and love throughout.  Without her compassion, tenderness, and understanding I would not be half the open and vibrant person that I am today, and I would know so much less of myself.  It is awe-inspiring to think about, and it is a pleasure and an honor to acknowledge her like this and to dedicate this book to her.
 
 Thanks to my many friends here, and thanks also to Thomas Dunning especially.  Thanks, everyone.  Theveryone.
 
