--- a/finite.tex
+++ b/finite.tex
@@ -987,7 +987,7 @@ E(1)P & \cong KU_{(p)}.
 In general, the quotient of a ring spectrum by a homotopy element does not give another ring spectrum.  The most typical example of this phenomenon is that $\S/2$ is not a ring spectrum, since its homotopy is not $2$--torsion.  Most of our constructions above do not suffer from this deficiency, with one exception: Morava $K$--theories at $p = 2$ are not commutative.  Instead, there is a derivation $Q_d: K(d) \to \Susp K(d)$ which tracks the commutativity by the relation \[ab - ba = u Q_d(a) Q_d(b).\]  In particular, we find that $K(d)^* X$ is a commutative ring whenever $K(d)^1 X = 0$, which is often the case.
 \end{remark}
 
-\begin{remark}\citeme{Section 3 of From Spectra to Stacks}
+\begin{remark}\label{RemovingStackinessFromSpectra}\citeme{Section 3 of From Spectra to Stacks}
 Before turning to the other half of this Lecture, we feel obligated to include one out-of-place remark that the first-time reader is advised to skip.  The pullback idea expressed in \Cref{PullingBackOverMfgVsMfgl} intermingles interestingly with the detection result expressed in \Cref{StackinessMeasuresNonorientability}: there is a certain program, which is beyond the scope of this point of the book, which realizes spectra associated to certain nontrivial \emph{stacks} equipped with maps to the moduli of formal groups.  For instance, the non-complex-orientable spectrum $KO$ is attached to a map \[\Spec \Z \mmod C_2 \to \moduli{fg}\] which selects $KU$ with its complex-conjugation action.  There is a sequence of non-complex-orientable ring spectra $X(n) = T(\Loops SU(n))$ which limit to $X(\infty) = MU$ and which carry ``partial complex-orientations'' that give a Thom isomorphism for $\CP^{n-1}$, i.e., they come equipped with a specified formal group law modulo terms of degree $n$.  We write $\moduli{fg}^{(n)}$ for the moduli of formal groups where the isomorphisms are required to act trivially on space of $n$--jets (so that, e.g., \Cref{StrictIsosRemark} concerns $\moduli{fg}^{(1)}$).  The pullback of stacks
 \begin{center}
 \begin{tikzcd}
