--- a/main.bib
+++ b/main.bib
@@ -713,6 +713,23 @@ MRREVIEWER = {Neil P. Strickland},
   year = {2008}
 }
 
+@article {GoerssTMF,
+    AUTHOR = {Goerss, Paul G.},
+     TITLE = {Topological modular forms [after {H}opkins, {M}iller and
+              {L}urie]},
+      NOTE = {S\'eminaire Bourbaki. Volume 2008/2009. Expos\'es 997--1011},
+   JOURNAL = {Ast\'erisque},
+  FJOURNAL = {Ast\'erisque},
+    NUMBER = {332},
+      YEAR = {2010},
+     PAGES = {Exp. No. 1005, viii, 221--255},
+      ISSN = {0303-1179},
+      ISBN = {978-2-85629-291-4},
+   MRCLASS = {55N34 (11F23 14D23 14H52 14L05 55N22)},
+  MRNUMBER = {2648680},
+MRREVIEWER = {Tyler D. Lawson},
+}
+
 @incollection {GoerssHopkins,
     AUTHOR = {Goerss, P. G. and Hopkins, M. J.},
      TITLE = {Moduli spaces of commutative ring spectra},
@@ -1129,6 +1146,23 @@ MRREVIEWER = {R. E. Stong},
 MRREVIEWER = {Thomas Zink},
 }
 
+@incollection {KatzSTLocalModuli,
+    AUTHOR = {Deligne, P.},
+     TITLE = {Cristaux ordinaires et coordonn\'ees canoniques},
+ BOOKTITLE = {Algebraic surfaces ({O}rsay, 1976--78)},
+    SERIES = {Lecture Notes in Math.},
+    VOLUME = {868},
+     PAGES = {80--137},
+      NOTE = {With the collaboration of L. Illusie,
+              With an appendix by Nicholas M. Katz},
+ PUBLISHER = {Springer, Berlin-New York},
+      YEAR = {1981},
+   MRCLASS = {14F30 (14J25)},
+  MRNUMBER = {638599},
+MRREVIEWER = {William E. Lang},
+}
+
+
 @article {KitchlooLaures,
     AUTHOR = {Kitchloo, Nitu and Laures, Gerd},
      TITLE = {Real structures and {M}orava {$K$}-theories},
@@ -1260,6 +1294,23 @@ MRREVIEWER = {J. F. Adams},
 MRREVIEWER = {A. Liulevicius},
 }
 
+@incollection {LawsonAbVars,
+    AUTHOR = {Lawson, Tyler},
+     TITLE = {An overview of abelian varieties in homotopy theory},
+ BOOKTITLE = {New topological contexts for {G}alois theory and algebraic
+              geometry ({BIRS} 2008)},
+    SERIES = {Geom. Topol. Monogr.},
+    VOLUME = {16},
+     PAGES = {179--214},
+ PUBLISHER = {Geom. Topol. Publ., Coventry},
+      YEAR = {2009},
+   MRCLASS = {55N20 (55N15 55N34 55P43)},
+  MRNUMBER = {2544390},
+MRREVIEWER = {Michael A. Hill},
+       DOI = {10.2140/gtm.2009.16.179},
+       URL = {http://dx.doi.org/10.2140/gtm.2009.16.179},
+}
+
 @article {LawsonDisplays,
     AUTHOR = {Lawson, Tyler},
      TITLE = {Structured ring spectra and displays},
@@ -1367,6 +1418,22 @@ MRREVIEWER = {J. Dieudonn{\'e}},
   author = {Lurie, Jacob},
   title = {Higher Algebra},
   note = {\url{http://www.math.harvard.edu/~lurie/papers/HA.pdf}, Accessed: 2016-09-22}
+}
+
+@book {LurieHTT,
+    AUTHOR = {Lurie, Jacob},
+     TITLE = {Higher topos theory},
+    SERIES = {Annals of Mathematics Studies},
+    VOLUME = {170},
+ PUBLISHER = {Princeton University Press, Princeton, NJ},
+      YEAR = {2009},
+     PAGES = {xviii+925},
+      ISBN = {978-0-691-14049-0; 0-691-14049-9},
+   MRCLASS = {18-02 (18B25 18E35 18G30 18G55 55U40)},
+  MRNUMBER = {2522659},
+MRREVIEWER = {Mark Hovey},
+       DOI = {10.1515/9781400830558},
+       URL = {http://dx.doi.org/10.1515/9781400830558},
 }
 
 @BOOK{LurieSAG,
@@ -2169,6 +2236,20 @@ MRREVIEWER = {A. H. Clark},
   title        = {\textit{Stacks Project}},
   howpublished = {\url{http://stacks.math.columbia.edu}},
   year         = {2014},
+}
+
+@article {Stojanoska,
+    AUTHOR = {Stojanoska, Vesna},
+     TITLE = {Duality for topological modular forms},
+   JOURNAL = {Doc. Math.},
+  FJOURNAL = {Documenta Mathematica},
+    VOLUME = {17},
+      YEAR = {2012},
+     PAGES = {271--311},
+      ISSN = {1431-0635},
+   MRCLASS = {55N34 (14D23 14H52 55N91 55P43)},
+  MRNUMBER = {2946825},
+MRREVIEWER = {Paul G. Goerss},
 }
 
 @article {Stong,
