change a couple things in A.4

--- a/powerops.tex
+++ b/powerops.tex
@@ -766,7 +766,7 @@ We now appeal to basic results about $\moduli{ell} \times \Spec \Z[1/6]$ to comp
 
 \section{Orientations by \texorpdfstring{$E_\infty$}{Eoo} maps}\label{JuvitopTalkSection}
 
-A more modern take on the story of the $\sigma$--orientation passes directly through the algebra of $E_\infty$--ring spectra.  Though technically intensive, our reward for grappling with this will be the modularity of the $\String$--orientation, enriching \Cref{WittensTheoremForBU6} to the real setting.  Luckily, most of the basic ideas are classically familiar, centering on a particular functor \[\gl_1\co E_\infty\CatOf{RingSpectra} \to \CatOf{Spectra}.\]  This functor derives its name from two compatible sources: for one, its underlying infinite loopspace is the construction $GL_1$ described in \Cref{LectureThomSpectra}; and secondly, it participates in an adjunction
+We now recount a more modern take on the story of the $\sigma$--orientation which passes directly through the algebra of $E_\infty$ ring spectra.  Though technically intensive, our reward for grappling with this will be the modularity of the $\String$--orientation, enriching \Cref{WittensTheoremForBU6} to the real setting.  Luckily, most of the basic ideas are classically familiar, centering on a particular functor \[\gl_1\co E_\infty\CatOf{RingSpectra} \to \CatOf{Spectra}.\]  This functor derives its name from two compatible sources: for one, its underlying infinite loopspace is the construction $GL_1$ described in \Cref{LectureThomSpectra}; and secondly, it participates in an adjunction
 \begin{center}
 \begin{tikzcd}[column sep=4em]
 \CatOf{ConnectiveSpectra} \arrow[shift left=0.3\baselineskip, "\Susp^\infty_+ \Omega^\infty"]{r} & E_\infty\CatOf{RingSpectra} \arrow[shift left=0.3\baselineskip, "\gl_1"]{l}
@@ -808,13 +808,13 @@ hence $E_\infty(MG, R)$ appears as the fiber at $\gl_1 \eta_R$ of the restrictio
 
 \begin{corollary}
 \citeme{AHR}
-The mapping set $E_\infty(Mj, R)$ is nonempty if and only if $\gl_1 \eta_R \circ j$ is null-homotopic.  If this is the case, then $E_\infty(Mj, R)$ is a torsor for $[\Susp g, \gl_1 R]$.
+The mapping set $E_\infty(Mj, R)$ is nonempty if and only if $\gl_1 \eta_R \circ j$ is null-homotopic.  If this is the case, then $E_\infty(Mj, R)$ is a torsor for $[\Susp g, \gl_1 R]$. \qed
 \end{corollary}
 
-Ando, Hopkins, and Rezk have used this presentation to understand the mapping space $E_\infty(M\String, \tmf)$.  In this Appendix, we will use this same technology to understand the mapping space $E_\infty(M\Spin, KO_{(p)})$, which proceeds along entirely similar lines but is a \emph{considerably} simpler computation.\footnote{Ando, Hopkins, and Rezk also do $E_\infty(M\Spin, KO)$ as a warm-up computation~\cite[Section 7]{AHR}, and we are further $p$--localizing that result so as not to have to think about arithmetic fracture.  Working arithmetically globally should be an easy exercise for the reader.}  The approach to this computation is to mix the presentation above with chromatic fracture applied to the target:\todo{Put a pullback corner here.}
+Ando, Hopkins, and Rezk have used this presentation to understand the mapping space $E_\infty(M\String, \tmf)$.  In this Lecture, we will use this same technology to understand the mapping space $E_\infty(M\Spin, KO_{(p)})$, which proceeds along entirely similar lines but is a \emph{considerably} simpler computation.\footnote{Ando, Hopkins, and Rezk also do $E_\infty(M\Spin, KO)$ as a warm-up computation~\cite[Section 7]{AHR}, and we are further $p$--localizing that result so as not to have to think about arithmetic fracture.  Working arithmetically globally should be an easy exercise for the reader.}  The approach to this computation is to mix the presentation above with chromatic fracture applied to the target:
 \begin{center}
 \begin{tikzcd}
-M\Spin \arrow{r} \arrow[bend left=15]{rr} \arrow{rrd} \arrow{rd} & KO_{(p)} \arrow{r} \arrow[crossing over]{d} & KO_p \arrow{d} \\
+M\Spin \arrow[densely dotted]{r} \arrow[bend left=15]{rr} \arrow{rrd} \arrow{rd} & KO_{(p)} \arrow{r} \arrow[crossing over]{d} & KO_p \arrow{d} \\
 & \Q \otimes KO \arrow{r} & \Q \otimes KO_p.
 \end{tikzcd}
 \end{center}
@@ -833,7 +833,7 @@ MU \arrow[densely dotted, "D"]{r} \arrow{rd} & \Q \otimes R \\
 constructed out of the unit map $\S \to MU$, the unit map $\S \to \Q \otimes R$, the rationalization map $S \to \Q \otimes \S \cong H\Q$, and the standard additive orientation $MU \to H\Q$ of an Eilenberg--Mac Lane spectrum.  When $E_\infty(MU, T)$ is nonempty, it is a torsor for $[bu, \gl_1 T]$, and since we have a preferred orientation $D$ we thus have isomorphisms \[\pi_0 E_\infty(MU, \Q \otimes R) \xleftarrow{\cong} [bu, \gl_1 \Q \otimes R] \xleftarrow{\cong} [bu, \Q \otimes \gl_1 R] \xrightarrow{\cong} [\Q \otimes bu, \Q \otimes \gl_1 R],\] the last of which is specified by a sequence of rational numbers $(t_{2k})_{k \ge 1}$.  The role played by the sequence $(t_{2k})$ is to perturb the Thom class.
 
 \begin{lemma}
-Write $x$ for the Thom class of $\L$ on $\CP^\infty$ in $(\Q \otimes R)$--cohomology as furnished by the automatic orientation $D$.  The Thom class associated to some other orientation of $\Q \otimes R$ is tracked by a difference series $x / \exp_F(x)$, and the sequence $(t_k)$ above is expressed by $x / \exp_F(x) = \exp(\sum_k t_k/k! \cdot x^k)$.\todo{This is confused.}
+Write $x$ for the Thom class of $\L$ on $\CP^\infty$ in $(\Q \otimes R)$--cohomology as furnished by the automatic orientation $D$.  The Thom class associated to some other orientation of $\Q \otimes R$ is tracked by a difference series $x / \exp_F(x)$, and the sequence $(t_k)$ above is expressed by $x / \exp_F(x) = \exp(\sum_k t_k/k! \cdot x^k)$.
 \end{lemma}
 \begin{proof}[Proof sketch]
 Let $v^k\co S^{2k} \to BU$ be the $k${\th} power of the class $\L$, so that it comes from a restriction \[S^{2k} \to (\CP^\infty)^{\sm k} \xrightarrow{\L^{\boxtimes k}} BU.\]  The Thom class for this bundle comes from the top Chern class, which is the top coefficient in the product of total Chern classes applied to the individual bundles.  Following the usual formulas shows the map $v^k$ to behave on homotopy by multiplication by $(-1)^k t_k$.
@@ -931,7 +931,7 @@ L_1 \gl_1 KO_p \arrow{rr} \arrow{dd} & & \widehat L_1 \gl_1 KO_p \arrow{ru}[desc
 L_0 \gl_1 KO_p \arrow{rr} \arrow{ru}[description]{\ell_0} & & L_0 \widehat L_1 \gl_1 KO_p. \arrow{ru}[description]{\ell_1} \arrow[crossing over, leftarrow]{uu}
 \end{tikzcd}
 \end{center}
-The behavior of the back horizontal map is determined by Rezk's formula for the logarithm.  \textbf{It acts by some nonzero number in every positive degree,}\todo{Justify this.} hence the fiber has the form $\prod_{k=-\infty}^0 \Susp^{4k-1} H\Q$.  Since the front face is a fiber square, this is also a calculation of the fiber of the map in the Lemma statement.\footnote{As a corollary of this same method, the Rezk logarithm for $R = KU^\wedge_p$ gives an equivalence $\gl_1 KU^\wedge_p[3, \infty) \to KU^\wedge_p[3, \infty)$.  This was previously known by nonconstructive methods to Adams and Priddy~\cite[Corollary 1.4]{AdamsPriddy}.}
+The behavior of the back horizontal map is determined by Rezk's formula for the logarithm.  It acts by some nonzero number in every positive degree, hence the fiber has the form $\prod_{k=-\infty}^0 \Susp^{4k-1} H\Q$.  Since the front face is a fiber square, this is also a calculation of the fiber of the map in the Lemma statement.\footnote{As a corollary of this same method, the Rezk logarithm for $R = KU^\wedge_p$ gives an equivalence $\gl_1 KU^\wedge_p[3, \infty) \to KU^\wedge_p[3, \infty)$.  This was previously known by nonconstructive methods to Adams and Priddy~\cite[Corollary 1.4]{AdamsPriddy}.}
 \end{proof}
 
 As a consequence, we have identifications \[\gl_1 \eta_{KO_p} \circ j \in [\spin, \gl_1 KO_p] \cong [\spin, L_1 \gl_1 KO_p] \cong [\spin, \widehat L_1 \gl_1 KO_p].\]  A direct application of the Rezk logarithm replaces $\widehat L_1 \gl_1 KO_p$ with $KO_p$, and the $K(1)$--localization of $\spin$ recovers $\Susp^{-1} KO_p$.  Altogether, this identifies $\gl_1 \eta_{KO_p} \circ j$ with a point in the mapping set $[\Susp^{-1} KO_p, KO_p]$---and we mark this as a point where we would like to understand the space of $KO$--operations.
