pullback corners todo

--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
 \todo[inline]{Use $\EinftyRings$ everywhere appropriate.}
 \todo[inline]{Use ${}^*$ and not ${}^\vee$ everywhere for linear dual.}
 \todo[inline]{See whether /tag instead of a right column makes step-by-step-justified align* look better.}
+\todo[inline]{Insert corners into pullback diagrams.}
 
 
 
